...

class AndroidCertificateService {
  final FlutterUserCertificatesAndroid _userCerts = FlutterUserCertificatesAndroid();

  Future<void> load() async {
    try {
      Map<String, DERCertificate> certs = await _userCerts.getUserCertificates() ?? {};

      for (var c in certs.values) {
        SecurityContext.defaultContext.setTrustedCertificatesBytes(c.toPEM().bytes);
      }
    } on PlatformException catch (e, s) {
      debugPrint("Failed to use local CA certificates on Android");
...
